styling: fix inconsistency in license padding on smaller screens

--- a/crates/bin/docs_rs_web/templates/style/_navbar.scss
+++ b/crates/bin/docs_rs_web/templates/style/_navbar.scss
@@ -142,7 +142,7 @@ div.nav-container {
             outline: unset;
         }
 
-        .pure-menu-item a.pure-menu-link {
+        .pure-menu-item .pure-menu-link {
             padding: 6.4px 5px 6.4px 5px;
             align-content: center;
 
@@ -157,7 +157,7 @@ div.nav-container {
         }
 
         @media #{$media-md} {
-            .docsrs-logo, .pure-menu-item .pure-menu-text, .pure-menu-item a.pure-menu-link {
+            .docsrs-logo, .pure-menu-item .pure-menu-text, .pure-menu-item .pure-menu-link {
                 padding: 6.4px 16px 6.4px 16px;
             }
         }
